fixed changes to button padding causing elements above to shift down (html)
button:active margin is 15px, up from 5px. this is because the default button margin is now 10px, up from 0px.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ canvas {
     button:active {
         width: 20vw;
         padding: 8px;
-        margin: 5px; /*Stops the item above moving downward due to the button shrinking*/
+        margin: 15px; /*Stops the item above moving downward due to the button shrinking*/
         font-size: 25px;
     }
     h1 {
